# Qt-Chat-App

./: .gitignore  README.md
ChatGUI/: CMakeLists.txt  Main.qml  main.cpp  messagemodel.cpp  messagemodel.h
ChatServer/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp
